# Unsupervised-Embedding-Evaluation-Framework

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/usnet/: __init__.py  _typing.py
src/usnet/evaluation/: __init__.py  benchmarks.py  framework.py
src/usnet/features/: __init__.py  extractor.py
src/usnet/graphs/: __init__.py  generators.py
tests/: __init__.py  conftest.py  test_evaluation.py  test_features.py  test_graphs.py
