[project]
name = "usnet"
version = "0.1.0"
description = "USNET: Unsupervised Structural Node Embedding Toolkit - A framework for evaluating graph embeddings using structural node features"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ash Dehghan" }
]
keywords = [
    "graph",
    "embedding",
    "unsupervised",
    "network-analysis",
    "structural-features",
    "benchmarking",
    "node2vec",
    "graph-neural-network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "igraph>=0.11.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/ashdehghan/usnet"
Documentation = "https://github.com/ashdehghan/usnet#readme"
Repository = "https://github.com/ashdehghan/usnet"
Issues = "https://github.com/ashdehghan/usnet/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usnet"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["usnet"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "igraph.*",
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "pandas.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/usnet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
